--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <title>Cool Ghosts Community's DARE to Ludum Dare</title>
-  </head
-  <body>
-    Hello, world!
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        
+        <title>The Cool Ghosts Community Dares to Ludum Dare</title>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <h1>The Cool Ghosts Community Dares to Ludum Dare</h1>
+                <p>Hello! We're the Cool Ghosts Community, and we're <abbr title="DISCLAIMER: we're not responsible for conflicting definitions of 'The Best'">The Best!</abbr></p>
+                <p>This is the holding page for what ever horrors the Cool Ghosts Community coughs up in response to Ludum Dare</p>
+            </div>
+            <div class="row">
+                <h3>Projects</h3>
+                <div class="card">
+                    <img src="http://placehold.if/318x180/ff69b4/ffffff" alt="LD35" class="card-img-top">
+                    <div class="card-block">
+                        <h4 class="card-title">Ludum Dare 35</h4>
+                        <p class="card-text">The Cool Ghost Community's Ludum Dare 35 project. Now Printing...</p>
+                        <a href="#" class="btn btn-primary btn-disabled">Check it out!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+    </body>
 </html>
