--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Ludum Dare 35</h4>
                         <p class="card-text">The Cool Ghost Community's Ludum Dare 35 project. Now Printing...</p>
-                        <a href="#" class="btn btn-primary btn-disabled">Check it out!</a>
+                        <a href="#" class="btn btn-primary disabled">Check it out!</a>
                     </div>
                 </div>
             </div>
