--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <img src="http://placehold.it/318x180/fc5492/ffffff" alt="LD35" class="card-img-top">
                     <div class="card-block">
                         <h4 class="card-title">Ludum Dare 35</h4>
+                        <p class="card-text"><strong>Theme:</strong> Shapeshift</p>
                         <p class="card-text">The Cool Ghost Community's Ludum Dare 35 project. Now Printing...</p>
                         <a href="#" class="btn btn-primary disabled">Check it out!</a>
                     </div>
